src/scss/common/_footer.scss
.site-footer {
  font-family: $roboto;
  padding: 45px 0 25px;
  background: $blue-top-nav;
  position: relative;
  z-index: 2;
  text-align: center;

  @include medium-and-up {
    padding: 35px 0 30px;
  }

  @include large-and-up {
    padding: 50px 0 40px;
  }

  .brown-bg & {
    background: $header-footer-bg;
  }

  a {
    color: inherit;
  }
}

.footer-social-media {
  color: $grey-20;
  font-size: rem(50);
  display: flex;
  justify-content: space-between;
  margin: auto;

  li {
    display: inline-block;
  }

   a {
     transition: color 100ms linear;

     &:hover {
       color: $white;
     }
   }
}

.footer-links,
.footer-links-secondary {
  @include medium-and-up {
    font-size: rem(16);
    margin-bottom: 10px;

    li {
      display: inline-block;

      &:after {
        content: "\002F";
        display: inline-block;
        margin: 0 16px;
      }

      &:last-of-type:after {
        display: none;
      }
    }
  }
}

.footer-links {
  color: $white;
  font-weight: bold;
  font-size: rem(18);
  line-height: 3;
  text-transform: uppercase;
  margin-bottom: 30px;

  @include medium-and-up {
    font-size: rem(16);
    margin-bottom: 10px;
  }

  @include large-and-up {
    font-size: rem(18);
  }
}

.footer-links-secondary {
  color: $grey-10;
  line-height: 2.5;
  text-transform: uppercase;

  @include medium-and-up {
    font-size: rem(14);
  }

  @include large-and-up {
    font-size: rem(16);
  }
}

.copyright-text {
  color: $grey-40;
  font-size: rem(12);
  line-height: 1.3;
  margin-left: auto;
  margin-right: auto;

  i {
    display: block;
    font-size: rem(25);
    margin-bottom: 10px;

    @include medium-and-up {
      display: inline-block;
      position: relative;
      font-size: 1.5em;
      bottom: -.15em;
      margin-right: 5px;
    }
  }

  a {
    color: $spray;
  }
}

.gp-year {
  color: $white;
  font-size: rem(12);

  @include medium-and-up {
    font-size: rem(14);
  }
}

